src/test/resources/etapa3/failing/structNotDeclared.ru
struct A {
    Int a, b;
}

impl A {
    .(Int a, Int b) {}
    fn method_1 () -> void {}
    st fn method_2(Int wala, Str jeje) -> Int {
        ret 1;
    }
}



impl B {
    .(){}
}


start {}